id으로도 사용자 정보 조회할 수 있도록 API 수정, 문서 보강 (#33)
* doc: 문서에 기본적으로 들어가야하는 내용 추가

* up: 프로그램 버전 업

* add: 개발된 웹 서버를 바로 실행할 수 있는 docker-compose 추가

* up: 개발된 제품을 쉽게 실행할 수 있도록 수정

* fix: 경로 수정

* doc: 환경 변수 기본 표 추가

* up: id 혹은 이메일로 사용자 조회할 수 있도록 수정

* doc: 문서 보강

* add: 기본 적인 key 추가

* up: 문서 보강

* up: 누락된 설명 추가

* up: 카카오 로그인을 위한 웹앱 수정

* add: 환경 변수 범례 소개
